fixed the enquiry form when on mobile

--- a/app/assets/stylesheets/enquiries.css.scss
+++ b/app/assets/stylesheets/enquiries.css.scss
@@ -6,10 +6,34 @@
   color: $purple;
   font-family: "myriad-pro", Arial, sans-serif;
   border: 10px $purple solid;
+  @include max-width(600px) {
+    width: 460px;
+    margin-left: -230px;
+  };
+  @include max-width(500px) {
+    width: 350px;
+    margin-left: -175px;
+  }
+  @include max-width(320px) {
+    width: 310px;
+    margin-left: -155px;
+  }
   input, textarea {
     font-family: "myriad-pro", Arial, sans-serif;
     width: 510px;
     max-height: 280px;
+    @include max-width(600px) {
+      width: 410px;
+      max-height: 240px;
+    }
+    @include max-width(500px) {
+      width: 300px;
+      max-height: 200px;
+    }
+    @include max-width(320px) {
+      width: 260px;
+      max-height: 100px;
+    }
     &:invalid {
       border-color: red;
       color:red;
